--- a/fitting-1.ipynb
+++ b/fitting-1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "higher-sally",
+   "id": "stunning-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "double-setting",
+   "id": "wired-multimedia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-nitrogen",
+   "id": "international-mandate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prerequisite-orientation",
+   "id": "healthy-collins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bored-theta",
+   "id": "extra-monte",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-bacteria",
+   "id": "simple-subsection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "leading-contribution",
+   "id": "north-singles",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "under-horror",
+   "id": "velvet-spine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vertical-jerusalem",
+   "id": "intense-peace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outside-scenario",
+   "id": "integrated-midnight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial-investigation",
+   "id": "personalized-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amino-hughes",
+   "id": "informal-aquatic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "variable-graph",
+   "id": "nutritional-supervision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advised-amazon",
+   "id": "integrated-forge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "promotional-abraham",
+   "id": "thousand-shirt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electoral-marsh",
+   "id": "civilian-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occasional-probe",
+   "id": "generous-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flush-metadata",
+   "id": "entitled-hayes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "likely-plate",
+   "id": "catholic-breast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beneficial-sight",
+   "id": "perfect-bernard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "processed-group",
+   "id": "turkish-scanner",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,11 +249,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-ranch",
+   "id": "capable-works",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function objective_abs(parameters, x, y, sigma)\n",
+    "function objective_gauss(parameters, x, y, sigma)\n",
     "    b = parameters[1]\n",
     "    m = parameters[2]\n",
     "\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "funny-spine",
+   "id": "serial-quarter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,19 +279,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coated-library",
+   "id": "directed-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
     "starting_params = [b_eye + 0., m_eye]\n",
-    "result = optimize(p -> objective_abs(p, data.x, data.y, data.sigma_y),\n",
+    "result = optimize(p -> objective_gauss(p, data.x, data.y, data.sigma_y),\n",
     "                  starting_params)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weekly-diving",
+   "id": "pharmaceutical-kernel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "small-guitar",
+   "id": "rural-mexican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dominant-shark",
+   "id": "excessive-pricing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gorgeous-disability",
+   "id": "standard-thriller",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "direct-injection",
+   "id": "unlikely-destination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
     "    deleteat!(scopy, i)\n",
     "\n",
     "    starting_params = [b_eye + 0., m_eye]\n",
-    "    result = optimize(p -> objective_abs(p, xcopy, ycopy, scopy),\n",
+    "    result = optimize(p -> objective_gauss(p, xcopy, ycopy, scopy),\n",
     "                      starting_params)\n",
     "    @assert Optim.converged(result)\n",
     "    b_jack, m_jack = Optim.minimizer(result)\n",
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graduate-fellow",
+   "id": "dietary-delhi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "identified-cigarette",
+   "id": "adverse-sheriff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italic-movie",
+   "id": "final-today",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "traditional-demand",
+   "id": "clinical-hobby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civic-netherlands",
+   "id": "rational-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "silent-lemon",
+   "id": "received-reflection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foster-theology",
+   "id": "unable-count",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "planned-express",
+   "id": "limited-behalf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deluxe-black",
+   "id": "circular-salvation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charitable-internship",
+   "id": "military-column",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "streaming-multimedia",
+   "id": "basic-baptist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,27 +498,18 @@
     "Axis(f[1, 1])\n",
     "errorbars!(alldata.x, alldata.y, alldata.sigma_y)\n",
     "scatter!(alldata.x, alldata.y, markersize=20, color=:red)\n",
-    "\n",
-    "#for i in 1:ndata\n",
-    "#    yy_jack = xx .* M_jack[i] .+ B_jack[i]\n",
-    "#    lines!(xx, yy_jack, color=:green)\n",
-    "#end\n",
-    "#\n",
-    "#yy_gauss = xx .* m_gauss .+ b_gauss\n",
-    "#lines!(xx, yy_gauss, color=:purple, linewidth=3)\n",
-    "\n",
     "f"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "promising-consultation",
+   "id": "beginning-election",
    "metadata": {},
    "outputs": [],
    "source": [
     "starting_params = [b_eye + 0., m_eye]\n",
-    "result = optimize(p -> objective_abs(p, alldata.x, alldata.y, alldata.sigma_y),\n",
+    "result = optimize(p -> objective_gauss(p, alldata.x, alldata.y, alldata.sigma_y),\n",
     "                  starting_params)\n",
     "@assert Optim.converged(result)\n",
     "b_bad, m_bad = Optim.minimizer(result)"
@@ -527,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varied-edmonton",
+   "id": "removable-offense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nutritional-gnome",
+   "id": "bronze-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "potential-george",
+   "id": "impaired-sharp",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "union-coalition",
+   "id": "median-internet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neural-scott",
+   "id": "extreme-cologne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fresh-theology",
+   "id": "nearby-circus",
    "metadata": {},
    "outputs": [],
    "source": []
