--- a/fitting-1.ipynb
+++ b/fitting-1.ipynb
@@ -619,9 +619,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.9"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.9.3"
   }
  },
  "nbformat": 4,
